--- a/core/static/index.html
+++ b/core/static/index.html
@@ -1,7 +1,24 @@
-<html>
+<!doctype html>
+
+<html lang="en">
 <head>
-<title>DatacraticDB</title>
+    <meta charset="utf-8">
+    <title>PredictiveDB</title>
+    <link rel="shortcut icon" href="favicon.ico">
+
+    <!-- external -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"> </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js" type="text/javascript"> </script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="ext/coffee-templates.min.js" type="text/javascript"> </script>
+
+
+    <!-- internal -->
+    <link rel="stylesheet" type="text/css" href="ui.css">
+    <script src="build/ui.js" type="text/javascript"> </script>
 </head>
 <body>
-Home page goes here.
 </body>
+</html>
