--- a/core/static/index.html
+++ b/core/static/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>PredictiveDB</title>
+    <title>DatacraticDB(TM)</title>
     <link rel="shortcut icon" href="favicon.ico">
 
     <!-- external -->
